Fix - Responsive CSS for alignwide

--- a/style.css
+++ b/style.css
@@ -2192,21 +2192,14 @@ a#scroll-up:hover {
 
 .no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
 .no-sidebar.boxed #primary .entry-content > .alignfull {
-	margin-left: -30px;
-	margin-right: -30px;
+	margin-left: -40px;
+	margin-right: -40px;
 }
 
 .no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover-image,
 .no-sidebar.box #primary .entry-content > .alignfull.wp-block-cover,
 .no-sidebar.box #primary .entry-content > .alignfull.wp-block-cover-image {
 	width: unset;
-}
-
-.no-sidebar-full-width.boxed #primary .entry-content > .alignwide,
-.no-sidebar.boxed #primary .entry-content > .alignwide {
-	margin-left: -30px;
-	margin-right: -30px;
-	max-width: unset;
 }
 
 /* =POST CONTENT
@@ -2545,7 +2538,7 @@ iframe#wp-custom-header-video {
 	}
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) and (min-width: 1200px) {
 	.no-sidebar-full-width #primary .entry-content > .alignwide {
 		margin-left: -20px;
 		margin-right: -20px;
@@ -2634,8 +2627,8 @@ iframe#wp-custom-header-video {
 	}
 	.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
 	.no-sidebar.boxed #primary .entry-content > .alignfull {
-		margin-left: -30px;
-		margin-right: -30px;
+		margin-left: -40px;
+		margin-right: -40px;
 	}
 	.no-sidebar #primary .entry-content > .alignfull {
 		margin-left: -15px;
